--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
 .red-border {
   border: 1px solid red;
@@ -19,11 +19,8 @@
   background-color: #21d4d4;
   min-height: 100vh;
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  text-align: center;
 }
 
 .App-link {
