--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -1,10 +1,24 @@
-.App-logo {
-  width: 200px;
-  height: 200px;
-}
 
 .trivia-game {
   font-family: 'Russo One';
+}
+
+.App-logo {
+  width: 200px;
+  height: 200px;
+  pointer-events: none;
+  margin: 0 auto;
+}
+
+.app-header {
+  background-color: #21d4d4;
+  min-height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .box-login {
@@ -30,6 +44,7 @@
   width: 26.8rem;
   padding: 2% 0;
   border-radius: 8px;
+  margin-bottom: 5px;
   border:0;
 }
 
