--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -6,7 +6,7 @@
 }
 
 .player-info {
-  font-family: 'Russo One';
+  font-family: Russo One, sans-serif;
   font-size: 1.2rem;
   display: flex;
   color: white;
