--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -1,60 +1,62 @@
 .trivia-game {
-  font-family: 'Russo One';
+  font-family: Russo One, sans-serif;
 }
 
 .App-logo {
-  width: 200px;
   height: 200px;
-  pointer-events: none;
   margin: 0 auto;
+  pointer-events: none;
+  width: 200px;
 }
 
 .app-header {
   background-color: #21d4d4;
-  min-height: 100vh;
-  width: 100vw;
+  color: white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: center;
+  min-height: 100vh;
+  width: 100vw;
 }
 
 .box-login {
+  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
 }
 
 .box-login input {
-  font-family: 'Russo One';
-  font-size: 1.4rem;
-  width: 25rem;
-  padding: 2% 15px;
-  margin-bottom: 5px;
-  border-radius: 8px;
   border:0;
+  border-radius: 8px;
+  font-family: Russo One, sans-serif;
+  font-size: 1.4rem;
+  margin-bottom: 5px;
+  padding: 2% 15px;
+  width: 25rem;
 }
 
 .box-login button {
-  font-family: 'Russo One';
-  font-size: 1.4rem;
-  width: 26.8rem;
-  padding: 2% 0;
+  border: 0;
   border-radius: 8px;
+  font-family: Russo One, sans-serif;
+  font-size: 1.4rem;
   margin-bottom: 5px;
-  border:0;
+  padding: 2% 0;
+  width: 26.8rem;
 }
 
 .box-login button:enabled {
-  background-color: #E86F3A;
+  background-color: #e86f3a;
   color: white;
   cursor: pointer;
 }
 
-@media ( min-width: 1100px ) {
+@media ( min-width : 1100px ) {
+
   .box-login {
     display: grid;
   }
+
 }
