--- a/src/components/Questions/style.css
+++ b/src/components/Questions/style.css
@@ -1,7 +1,7 @@
 .red-border {
-  border: 3px solid red;
+  border: 3px solid rgb(255, 0, 0)!important;
 }
 
 .green-border {
-  border: 3px solid green;
+  border: 3px solid rgb(6, 240, 15)!important;
 }
